# rust-toolbox

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  committed.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
scripts/: changelog.sh  test-all.sh
src/: axum_tools.rs  diesel_tools.rs  lib.rs  mail_tools.rs  tonic_tools.rs  tower_tools.rs
src/axum_tools/: api_error.rs  auth.rs  controller.rs  rate_limit.rs
src/axum_tools/auth/: in_memory.rs  jwt.rs
src/diesel_tools/: database.rs  pagination.rs  repository.rs  service.rs  sort.rs
src/diesel_tools/repository/: delete.rs  find.rs  save.rs
src/diesel_tools/service/: database_service.rs  entity_service.rs
src/tonic_tools/: request_id.rs  service_error.rs
src/tower_tools/: layers.rs
src/tower_tools/layers/: request_id.rs  trace.rs
tests/: common.rs  integration.rs  mail_tools.rs
tests/axum_tools/: auth.rs
tests/diesel_tools/repository/: delete.rs  find.rs  save.rs
tests/diesel_tools/service/: entity_service.rs
tests/tonic_tools/: request_id.rs
tests/tower_tools/layers/: request_id.rs
